Version 1.4 - Fixed images from not showing up

--- a/resources/main.sass
+++ b/resources/main.sass
@@ -166,15 +166,15 @@
                     .first-image
                         img
                             margin-top: $first-image-margin-top
-                            content: url("/resources/capstone_colmar_assets/images/information-orientation-mobile.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation-mobile.jpg")
                             @extend %mini-first-image
                     .second-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-campus-mobile.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus-mobile.jpg")
                             @extend %mini-second-image
                     .last-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg")
                             @extend %mini-last-image
             section#card-3
                 header
@@ -575,14 +575,14 @@
                             @extend %link-style-2
                     .first-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-orientation.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
                             @extend %mini-first-image-2
                     .second-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-campus.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
@@ -590,7 +590,7 @@
                             @extend %mini-second-image-2
                     .last-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-guest-lecture.jpg")
+                            content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
