--- a/resources/styles.css
+++ b/resources/styles.css
@@ -97,13 +97,13 @@
   }
   body main section#card-2 #right-side .first-image img {
     margin-top: 16px;
-    content: url("/resources/capstone_colmar_assets/images/information-orientation-mobile.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation-mobile.jpg");
   }
   body main section#card-2 #right-side .second-image img {
-    content: url("/resources/capstone_colmar_assets/images/information-campus-mobile.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus-mobile.jpg");
   }
   body main section#card-2 #right-side .last-image img {
-    content: url("/resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg");
   }
   body main section#card-3 header h1 {
     margin-top: 32px;
@@ -332,20 +332,20 @@
     opacity: 0.5;
   }
   body main section#card-2 article#right-side .first-image img {
-    content: url("/resources/capstone_colmar_assets/images/information-orientation.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation.jpg");
     height: auto;
     width: 35%;
     margin-left: 16px;
   }
   body main section#card-2 article#right-side .second-image img {
-    content: url("/resources/capstone_colmar_assets/images/information-campus.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus.jpg");
     height: auto;
     width: 35%;
     margin-left: 16px;
     margin-top: 16px;
   }
   body main section#card-2 article#right-side .last-image img {
-    content: url("/resources/capstone_colmar_assets/images/information-guest-lecture.jpg");
+    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture.jpg");
     height: auto;
     width: 35%;
     margin-left: 16px;
